# Pico-Power-Monitor

./: .gitignore  CMakeLists.txt  README.md
Components/Config/: CMakeLists.txt  config.c  config.h
Components/EasyLogger/: CMakeLists.txt
Components/EasyLogger/easylogger/inc/: elog_cfg.h
Components/EasyLogger/easylogger/port/: elog_port.c
Components/EasyLogger/easylogger/src/: elog_async.c
Components/Filter/: CMakeLists.txt  filter.cpp  filter.h
Components/FreeRTOS-Kernel/: History.txt  tasks.c
Components/FreeRTOS-Kernel/include/: FreeRTOS.h  mpu_wrappers.h
Components/FreeRTOS-Kernel/portable/GCC/ARM_CA9/: port.c
Components/FreeRTOS-Kernel/portable/IAR/ARM_CM4F_MPU/: port.c  portasm.s  portmacro.h
Components/FreeRTOS-Kernel/portable/MemMang/: heap_2.c  heap_4.c  heap_5.c
Components/I2C_Base/: CMakeLists.txt  i2c_base.cpp  i2c_base.h
Components/INA226/: CMakeLists.txt  INA226.cpp  INA226.h  INA226_reg_table.h
Components/SLS_Gen/: CMakeLists.txt  ui.c  ui.h  ui_events.c  ui_font_SourceHanMono16.c  ui_font_SourceHanSan16.c  ui_font_SourceHanSan20.c  ui_helpers.c  ui_helpers.h
Components/Screen/: CMakeLists.txt  ST7735.c  ST7735.h  Screen.cpp  Screen.h
Components/lvgl/: lv_conf.h
Components/lvgl/env_support/cmake/: custom.cmake
Components/lvgl_port/: CMakeLists.txt  lvgl_port.cpp  lvgl_port.h
Core/: CMakeLists.txt
Core/Inc/: FreeRTOSConfig.h  main.h
Core/Src/: main.c  main.cpp
GUI/: Monitor_UI.sll  Monitor_UI.spj  Monitor_UI_events.py
GUI/assets/: ui_font_SourceHanMono16.fcfg  ui_font_SourceHanMono20.c  ui_font_SourceHanMono20.fcfg  ui_font_SourceHanSan16.fcfg  ui_font_SourceHanSan20.fcfg
documents/: pio汇编命令.xlsx
